[metadata]
name = ebuild_commander
description = Run commands in containers derived from Gentoo stage3 images
version = attr: ebuild_commander.__version__
author = Yuan Liao
author_email = liaoyuan@gmail.com
license = GPLv3+

[options]
package_dir =
    = src
packages = find:
scripts =
    bin/ebuild-cmder

[options.packages.find]
where = src
