[metadata]
name = ebuild_commander
description = Test ebuilds with fine-grained control in stage3 Docker containers
url = https://github.com/Leo3418/ebuild-commander
version = attr: ebuild_commander.__version__
author = Yuan Liao
author_email = liaoyuan@gmail.com
license = GPLv3+

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
scripts =
    bin/ebuild-cmder

[options.packages.find]
where = src

[tox:tox]
envlist = py
isolated_build = True

[testenv]
commands = python -m unittest discover []
